[package]
name = "ethproofs_verifier"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21.7"
bincode = { version = "2", features = ["serde"] }

execution_utils = {git = "https://github.com/matter-labs/zksync-airbender", rev = "0e002409d49200f3dd7098fc2a0a0702021afe62", features=["verifier_binaries"]}
verifier_common = {git = "https://github.com/matter-labs/zksync-airbender", rev = "0e002409d49200f3dd7098fc2a0a0702021afe62"}
full_statement_verifier = {git = "https://github.com/matter-labs/zksync-airbender", rev = "0e002409d49200f3dd7098fc2a0a0702021afe62"}


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = true
incremental = true