[package]
name = "ethproofs_verifier"
version = "0.1.0"
edition = "2024"

[lib]
name = "ethproofs_verifier_lib"
path = "src/lib.rs"

[[bin]]
name = "ethproofs_verifier"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21.7"
bincode = { version = "2", features = ["serde"] }

execution_utils = {git = "https://github.com/matter-labs/zksync-airbender", rev = "da7d3ca8b17712fa5c2f26e80d0546e90c16c704", features=["verifier_binaries"]}
verifier_common = {git = "https://github.com/matter-labs/zksync-airbender", rev = "da7d3ca8b17712fa5c2f26e80d0546e90c16c704"}
full_statement_verifier = {git = "https://github.com/matter-labs/zksync-airbender", rev = "da7d3ca8b17712fa5c2f26e80d0546e90c16c704"}


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = true
incremental = true