[package]
name = "ethproofs_verifier"
version = "0.1.0"
edition = "2024"

[lib]
name = "ethproofs_verifier_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3",  features = ["wasm_js"]}
console_error_panic_hook = "0.1"

clap = { version = "4.4", features = ["derive"] }
base64 = "0.21.7"
bincode = { version = "2", features = ["serde"] }

#execution_utils = { path = "../zksync-airbender/execution_utils", features=["verifier_binaries"]}
#verifier_common = { path = "../zksync-airbender/verifier_common"}
#full_statement_verifier = { path = "../zksync-airbender/full_statement_verifier"}


execution_utils = {git = "https://github.com/matter-labs/zksync-airbender", tag = "dev-v0.8.2", features=["verifier_binaries"]}
verifier_common = {git = "https://github.com/matter-labs/zksync-airbender", tag = "dev-v0.8.2"}
full_statement_verifier = {git = "https://github.com/matter-labs/zksync-airbender", tag = "dev-v0.8.2"}


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = true
incremental = true
